<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".ChooseAccount">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome_to_steam_shop"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/create_online_shop"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">


        <androidx.cardview.widget.CardView
            android:id="@+id/individual_cardview"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="10dp"
            app:cardElevation="6dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/img_check_individual"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="end"
                    android:background="@drawable/blue_background_circle"
                    android:src="@drawable/ic_check_black_24dp"
                    android:visibility="invisible"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@+id/individual_layout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:background="@drawable/purple_bacground_circle"
                            android:padding="8dp"
                            android:src="@drawable/ic_person"
                            android:tint="@color/white" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="20dp"
                            android:layout_marginStart="20dp"
                            android:background="@color/light_gray_line" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:paddingTop="10dp"
                            android:text="@string/individual"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18sp" />


                    </LinearLayout>
                </FrameLayout>


            </FrameLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/business_cardview"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="10dp"
            app:cardElevation="6dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/img_check_business"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="end"
                    android:background="@drawable/blue_background_circle"
                    android:src="@drawable/ic_check_black_24dp"
                    android:visibility="invisible" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@+id/business_layout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:background="@drawable/green_background_circle"
                            android:padding="8dp"
                            android:src="@drawable/ic_business"
                            android:tint="@color/white" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginEnd="20dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"
                            android:background="@color/light_gray_line" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:paddingTop="10dp"
                            android:text="@string/business"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18sp" />


                    </LinearLayout>
                </FrameLayout>
            </FrameLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>


    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/account_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:enabled="false"
        android:padding="10dp"
        android:clickable="true"
        fancy:fb_borderColor="@color/colorAccent"
        fancy:fb_defaultColor="@color/colorAccent"
        fancy:fb_disabledBorderColor="@android:color/darker_gray"
        fancy:fb_disabledColor="@android:color/darker_gray"
        fancy:fb_disabledTextColor="@android:color/white"
        fancy:fb_iconPaddingLeft="20dp"
        fancy:fb_iconPosition="right"
        fancy:fb_iconResource="@drawable/ic_arrow_right"
        fancy:fb_radius="5dp"
        fancy:fb_text="@string/next"
        fancy:fb_focusColor="@android:color/darker_gray"
        fancy:fb_textColor="@color/white"
        fancy:fb_textSize="18sp"
        android:focusable="true" />


</LinearLayout>
</androidx.core.widget.NestedScrollView>